--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <h1 class="project-name">Gscgameshow.GitHub.io</h1>
       <h2 class="project-tagline"></h2>
     </section>
+    
+    <applet code="ServerWindow.java" archive="testApplet.jar" width="800" height="600">
+</applet>
 
     <section class="main-content">
       <h3>
