--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         classid="java:ServerWindow.Class"
         width="500" height="500">
 </OBJECT>
+<p>
+  updated
+</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
