--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
 
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<OBJECT codetype="application/java"
-        classid="java:testApplet.jar"
-        width="500" height="500">
-</OBJECT>
+<applet code=”ServerWindow.class” height=500 width=500></applet> 
 <p>
-  updated2
+  updated3
 </p>
 
 <h3>
