--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <applet code="ServerWindow.class" code="ServerWindow.class" height=500 width=500></applet> 
 <p>
-  updated
+  updated2
 </p>
 
 <h3>
