--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
 
     <section class="main-content">
-<applet archive="manifestedJar.jar" code="ClientWindow.class" height=500 width=500></applet> 
+<applet archive="theOnceAndFutureJar.jar" code="ClientWindow.class" height=500 width=500></applet> 
 <p>
-  updated4
+  updated5
 </p>
 
 </footer>
