--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://www.java.com/js/deployJava.js"></script>
 <script>
   var dir = location.href.substring(0,location.href.lastIndexOf('/')+1);
-  var url = dir + "JWSTest.jnlp";
+  var url = "JWSTest.jnlp";
   deployJava.createWebStartLaunchButton(url, '1.7.0');
 </script>
 <p>
