--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <script src="https://www.java.com/js/deployJava.js"></script>
 <script>
   var dir = location.href.substring(0,location.href.lastIndexOf('/')+1);
-  var url = "JWSTest.jnlp";
+  var url = "gscgameshow.github.io/JWSTest.jnlp";
   deployJava.createWebStartLaunchButton(url, '1.7.0');
 </script>
 <p>
-  updated2
+  updated3
 </p>
 
 </footer>
